--- a/src/app/pages/evaluacion/evaluacion.component.html
+++ b/src/app/pages/evaluacion/evaluacion.component.html
@@ -45,10 +45,10 @@
                                             Debes seleccionar un tipo
                                         </div> -->
                                     </div>
-                                    <div class="col-md-4 mb-2">
+                                    <!-- <div class="col-md-4 mb-2">
                                         <label class="form-label">Minutos de evaluación (Vacío = Sin límite)</label>
                                         <input type="number"  id="descripcion" class="form-control" placeholder="Ingresa los minutos de la evaluación (opcional)" required>
-                                    </div>
+                                    </div> -->
 
                                 </div>
                                 <div class="modal-footer footer">
@@ -60,7 +60,7 @@
                                     </button>
                                 </div>
                             </div>
-                            <app-tabevaluaciones (eventoEnviarDataGrupo)="pasarDatosGrupo($event)" (eventoEnviarDataPregunta)="pasarDatosPregunta($event)"></app-tabevaluaciones>
+                            <!-- <app-tabevaluaciones (eventoEnviarDataGrupo)="pasarDatosGrupo($event)" (eventoEnviarDataPregunta)="pasarDatosPregunta($event)"></app-tabevaluaciones> -->
                         </form>
                     </div>
                 </div>
