--- a/src/app/pages/listgrupo/listgrupo.component.html
+++ b/src/app/pages/listgrupo/listgrupo.component.html
@@ -5,15 +5,15 @@
                 <div class="form mt-2">
                     <div class="row">
                         <div class="col-9">
-                            <h5 class="card-title">Listado de evaluaciones</h5>
+                            <h5 class="card-title">Listado de grupos</h5>
                         </div>
                         <!-- <div class="col-3 mt-2 d-flex flex-row justify-content-end p-2">
-                            <button type="button" class="btn btn-primary" routerLink="/dashboard/evaluacion">
-                                <i class="bi bi-plus-lg"></i>Agregar evaluación
+                            <button type="button" class="btn btn-primary" routerLink="/dashboard/grupo">
+                                <i class="bi bi-plus-lg"></i>Agregar grupo
                             </button>
                         </div> -->
                     </div>
-                    <app-dtevaluaciones></app-dtevaluaciones>
+                    <app-dtgrupos></app-dtgrupos>
                 </div>
             </div>
         </div>
