--- a/src/app/pages/configuracion/configuracion.component.html
+++ b/src/app/pages/configuracion/configuracion.component.html
@@ -85,7 +85,8 @@
     <div class="card d-flex justify-content-center align-items-center" style="display: inline-block; margin: 0 auto; width: 60%;">
         <form [formGroup]="formConfiguracion" id="form" style="display: inline-block; margin: 0 auto; width: 50%;">
             <div class="row">
-                <h3 class="form-label mt-2" id="title">Configuración</h3>
+                <h3 class="form-label mt-2 text-center" id="title">Configuración del Menú</h3>
+                <hr>
                 <div class="mt-2">
                     <label class="form-label">Menú</label>
                     <select [(ngModel)]='ngSelectM' class="form-select" id="menu" formControlName="menu" >
@@ -97,11 +98,11 @@
                 </div>
                 <div class="mt-3">
                     <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" id="cargo" name="tipo" formControlName="cargo" value="1" [(ngModel)]="selectedOption">
+                        <input class="form-check-input" type="radio" id="cargo" name="tipo" formControlName="cargo" value="1" [(ngModel)]="selectedOption" (click)="cambiarUno()">
                         <label class="form-check-label" for="cargo">Cargo</label>
                     </div>
                     <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" id="colaborador" name="tipo" formControlName="colaborador" value="2" [(ngModel)]="selectedOption">
+                        <input class="form-check-input" type="radio" id="colaborador" name="tipo" formControlName="colaborador" value="2" [(ngModel)]="selectedOption" (click)="cambiarDos()">
                         <label class="form-check-label" for="colaborador">Colaborador</label>
                     </div>
                 </div>
@@ -145,7 +146,7 @@
             </div>
             <div class="modal-footer">
                 <!-- <button type="button" class="btn btn-secondary cancelar" data-bs-dismiss="modal" (click)="cancelar()">Cerrar</button> -->
-                <button type="button" class="btn btn-success" id="submitButton" data-bs-dismiss="modal" (click)="guardar()">Agregar</button>
+                <button type="button" class="btn btn-success" id="submitButton" data-bs-dismiss="modal" (click)="guardar()" [disabled]="!formConfiguracion.valid">Agregar</button>
                 <button type="button" class="btn btn-primary" id="btnActualizar" (click)="editar();"> Actualizar </button>
             </div>
         </form>
