--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,11 +1,11 @@
-<section class="section dashboard">
+<!-- <section class="section dashboard">
     <div class="row">
         
-        <!-- Left side columns -->
+        
         <div class="col-lg-12">
             <div class="row">
 
-                <!-- Sales Card -->
+                
                 <div class="col-xxl-4 col-md-6">
                     <div class="card info-card sales-card">
 
@@ -39,8 +39,8 @@
                         </div>
 
                     </div>
-                </div><!-- End Sales Card -->
-                <!-- Revenue Card -->
+                </div>
+                
                 <div class="col-xxl-4 col-md-6">
                     <div class="card info-card revenue-card">
 
@@ -74,9 +74,9 @@
                         </div>
 
                     </div>
-                </div><!-- End Revenue Card -->
+                </div>
 
-                <!-- Customers Card -->
+                
                 <div class="col-xxl-4 col-xl-12">
 
                     <div class="card info-card customers-card">
@@ -109,20 +109,28 @@
                             </div>
                         </div>
                     </div>
-                </div><!-- End Customers Card -->
+                </div>
             </div>
         </div>
     </div>
-</section>
+</section> -->
 
 <!-- <h3>Documentos disponibles</h3> -->
+
+<div class="mx-auto loader" *ngIf="isLoading">
+    <div class="orbe" style="--index: 0"></div>
+    <div class="orbe" style="--index: 1"></div>
+    <div class="orbe" style="--index: 2"></div>
+    <div class="orbe" style="--index: 3"></div>
+    <div class="orbe" style="--index: 4"></div>
+</div>
 
 <section class="section dashboard">
     <div class="row">
         <div class="col-lg-12">
             
             <div class="card" *ngFor="let tipo of listaTipoDocumentos; let i = index">
-                <div class="filter ">
+                <div class="filter " *ngIf="id_cargo == 1">
                     <a class="icon" href="#" data-bs-toggle="dropdown"><i class="bi bi-three-dots"></i></a>
                     <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow">
                         <li><a class="dropdown-item" (click)="deshabilitar(tipo.id)">Deshabilitar</a></li>
