--- a/src/app/pages/datatable/datatable.component.html
+++ b/src/app/pages/datatable/datatable.component.html
@@ -27,16 +27,16 @@
                 <td>{{ item.departamento }}</td>
                 <td>{{ item.nombres }} {{item.apellidos}}</td>
                 <td>{{ item.cargo }}</td>
-                <td>{{ item.utlimoIngreso }}</td>
+                <td>{{ item.fechaSalida }}</td>
                <td style="text-align: center;">
-                    <a type="button" class="btn btn-outline-primary" data-bs-toggle="tooltip" data-bs-placement="top" title="Editar" [routerLink]="['/dashboard/collaborator', item.id]">
-                        <i class="bi bi-pencil-square"></i>
+                    <a type="button" class="" data-bs-toggle="tooltip" data-bs-placement="top" title="Editar" [routerLink]="['/dashboard/collaborator', item.id]">
+                        <i class="bi bi-pencil-square" style="font-size: 1rem; color: rgb(0, 132, 255);"></i>
                     </a>
-                    <a type="button" class="btn btn-outline-danger ms-2" data-bs-toggle="tooltip" data-bs-placement="top" title="Deshabilitar" (click)="eliminarColaborador(item.id)" *ngIf="Id != item.id">
-                        <i class="bi bi-trash"></i>
+                    <a type="button" class=" ms-2" data-bs-toggle="tooltip" data-bs-placement="top" title="Deshabilitar" (click)="eliminarColaborador(item.id)" *ngIf="Id != item.id">
+                        <i class="bi bi-trash" style="font-size: 1rem; color: rgb(248, 29, 29);"></i>
                     </a>
-                    <a type="button" class="btn btn-outline-warning ms-2" data-bs-toggle="tooltip" data-bs-placement="top" title="Desbloquear" (click)="desbloquear(item.id)" *ngIf="item.intentos == 0">
-                      <i class="bi bi-lock-fill"></i>
+                    <a type="button" class=" ms-2" data-bs-toggle="tooltip" data-bs-placement="top" title="Desbloquear" (click)="desbloquear(item.id)" *ngIf="item.intentos == 0">
+                      <i class="bi bi-lock-fill" style="font-size: 1rem; color: rgb(255, 174, 0);"></i>
                     </a>
                 </td>
             </tr>
