--- a/src/app/pages/datatable/dtevaluaciones/dtevaluaciones.component.css
+++ b/src/app/pages/datatable/dtevaluaciones/dtevaluaciones.component.css
@@ -14,45 +14,45 @@ table tr th{
     vertical-align:center;
 }
 
-/*
-  button {
-    padding: 1.3em 3em;
-    font-size: 11px;
-    text-transform: uppercase;
-    letter-spacing: 2.5px;
-    font-weight: 500;
-    color: #000;
-    background-color: #b9cbd1;
-    border: none;
-    border-radius: 45px;
-    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
-    transition: all 0.3s ease 0s;
-    cursor: pointer;
-    outline: none;
-  }
-  
-  button:hover {
-    background-color: #1fa7d9;
-    box-shadow: 0px 15px 20px rgba(38, 156, 186, 0.4);
-    color: #fff;
-    transform: translateY(-7px);
+.loader {
+  --size-loader: 70px;
+  --size-orbe: 10px;
+  width: var(--size-loader);
+  height: var(--size-loader);
+  position: relative;
+  transform: rotate(45deg);
+}
+
+.orbe {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  --delay: calc(var(--index) * 0.1s);
+  animation: orbit7456 ease-in-out 1.5s var(--delay) infinite;
+  opacity: calc(1 - calc(0.2 * var(--index)));
+}
+
+.orbe::after {
+  position: absolute;
+  content: '';
+  top: 0;
+  left: 0;
+  width: var(--size-orbe);
+  height: var(--size-orbe);
+  background-color: #3ae374;
+  box-shadow: 0px 0px 20px 2px #3ae374;
+  border-radius: 50%;
+}
+
+@keyframes orbit7456 {
+  0% {
   }
 
-  .cancelar:hover {
-    background-color: #3b3d3d;
-    box-shadow: 0px 15px 20px rgba(123, 125, 124, 0.4);
-    color: #fff;
-    transform: translateY(-7px);
-  }
-  
-  button:active {
-    transform: translateY(-1px);
+  80% {
+    transform: rotate(360deg);
   }
 
-  @media (max-width: 767px) {
-    .table-responsive td:nth-child(n+4), 
-    .table-responsive th:nth-child(n+4) {
-      display: none;
-    }
+  100% {
+    transform: rotate(360deg);
   }
-  */
+}
