--- a/src/app/pages/datatable/dtevaluaciones/dtevaluaciones.component.html
+++ b/src/app/pages/datatable/dtevaluaciones/dtevaluaciones.component.html
@@ -30,15 +30,19 @@
             <tr *ngFor="let item of listaEvaluaciones; let i = index;">
                 <td>{{ i + 1 }}</td>
                 <td>{{ item.titulo }}</td>
-                <td>{{ item.nombreArchivo }}</td>
-                <td>{{ item.tipo }}</td>
+                <td>{{ item.descripcion }}</td>
+                <td>{{ item.preguntas }}</td>
+                <td>{{ item.grupos }}</td>
                 <td>{{ item.created_at }}</td>
                 <td style="text-align: center;">
-                    <!-- <a type="button" class="btn btn-outline-primary" data-bs-toggle="tooltip" data-bs-placement="top" title="Editar" [routerLink]="['/dashboard/collaborator', item.id]">
-                        <i class="bi bi-pencil-square"></i>
-                    </a> -->
-                    <a type="button" class="btn btn-outline-danger ms-2" data-bs-toggle="tooltip" data-bs-placement="top" title="Deshabilitar" (click)="eliminarDocumento(item)">
-                        <i class="bi bi-trash"></i>
+                    <a type="button" class="" data-bs-toggle="tooltip" data-bs-placement="top" title="Agregar Pregunta" [routerLink]="['/dashboard/pregunta', item.id]">
+                        <i class="bi bi-question-circle-fill" style="font-size: 1rem; color: rgb(12, 204, 5);"></i>
+                    </a>
+                    <a type="button" class="ms-2" data-bs-toggle="tooltip" data-bs-placement="top" title="Editar" [routerLink]="['/dashboard/collaborator', item.id]">
+                        <i class="bi bi-pencil-square" style="font-size: 1rem; color: rgb(8, 134, 252);"></i>
+                    </a>
+                    <a type="button" class=" ms-2" data-bs-toggle="tooltip" data-bs-placement="top" title="Deshabilitar" (click)="eliminarDocumento(item)">
+                        <i class="bi bi-trash" style="font-size: 1rem; color: rgb(252, 13, 13);"></i>
                     </a>
                 </td>
             </tr>
