--- a/src/app/pages/datatable/dtgrupos/dtgrupos.component.html
+++ b/src/app/pages/datatable/dtgrupos/dtgrupos.component.html
@@ -1,7 +1,7 @@
 <div class="container table-responsive ">
     <div class="d-flex justify-content-end mb-2">
-        <button type="button" class="btn btn-primary ml-2 mt-2" id="grupo" data-bs-toggle="modal" data-bs-target="#staticBackdrop" (click)="cancelar()">
-            <i class="fas fa-plus-plus"></i> Agregar Grupo
+        <button type="button" class="btn btn-primary ml-2 mt-2" id="grupo" routerLink="/dashboard/grupo" data-bs-target="#staticBackdrop" >
+            <i class="bi bi-plus-lg"></i> Agregar Grupo
         </button>
     </div>
     <table [ngClass]="{'table-responsive': true}" datatable="datatable" [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table table-striped table-bordered row-border hover" id="table">
@@ -27,11 +27,15 @@
                 <td>{{ item.ultimaModificacion  }}</td>
                 <td>{{ item.fechaRegistro }}</td>
                <td style="text-align: center;">
-                    <a type="button" class="btn btn-outline-primary" data-bs-toggle="tooltip" data-bs-placement="top" title="Editar">
-                        <i class="bi bi-pencil-square"></i>
+                    <a type="button" class="" data-bs-toggle="tooltip" data-bs-placement="top" title="Agregar Evaluacion" [routerLink]="['/dashboard/evaluacion', item.id]">
+                        <i class="bi bi-card-checklist" style="font-size: 1rem; color: rgb(12, 204, 5);"></i>
                     </a>
-                    <a type="button" class="btn btn-outline-danger ms-2" data-bs-toggle="tooltip" data-bs-placement="top" title="Eliminar" (click)="eliminar(item)">
-                        <i class="bi bi-trash"></i>
+
+                    <a type="button" class="ms-2" data-bs-toggle="tooltip" data-bs-placement="top" title="Editar">
+                        <i class="bi bi-pencil-square" style="font-size: 1rem; color: rgb(8, 134, 252);"></i>
+                    </a>
+                    <a type="button" class=" ms-2" data-bs-toggle="tooltip" data-bs-placement="top" title="Eliminar" (click)="eliminar(item)">
+                        <i class="bi bi-trash" style="font-size: 1rem; color: rgb(252, 13, 13);"></i>
                     </a>                   
                 </td>
             </tr>
@@ -42,7 +46,7 @@
     </table>
 </div>
 
-<div class="modal fade " id="staticBackdrop" aria-hidden="true" aria-labelledby="exampleModalToggleLabel" tabindex="-1">
+<!-- <div class="modal fade " id="staticBackdrop" aria-hidden="true" aria-labelledby="exampleModalToggleLabel" tabindex="-1">
     <div class="modal-dialog modal-xl card">
         <div class="modal-content">
             <div class="form">
@@ -116,4 +120,4 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
