PORTAL: Formulario de preguntas y creacion de grupo

--- a/src/app/pages/preguntas/preguntas.component.html
+++ b/src/app/pages/preguntas/preguntas.component.html
@@ -79,7 +79,7 @@
     <div *ngIf="ocultarBoton == true" class="container">
         <div class="row">
             <div class="col-md-6 mx-auto text-center d-flex align-items-center">
-                <button id="btnGuardarPreguntas" type="button" class="btn btn-success mx-auto">Guardar preguntas...</button>
+                <button id="btnGuardarPreguntas" type="button" class="btn btn-success mx-auto" (click)="guardarPregunta()">Guardar preguntas...</button>
             </div>
           </div>
     </div>
