--- a/src/app/pages/grupo/grupo.component.html
+++ b/src/app/pages/grupo/grupo.component.html
@@ -4,32 +4,40 @@
         <!-- <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button> -->
     </div>
     <div class="modal-body">
-        <form  id="form">
+        <form [formGroup]="formGrupos" id="form">
             <div class="row">
                 <div class="col-md-6 mb-2">
-                    <label for="nombre" class="form-label">Ingresa el nombre del grupo:</label>
+                    <label class="form-label">Ingresa el nombre del grupo:</label>
                     <input class="form-control" type="text" id="nombre" formControlName="nombre" placeholder="Agregar un nombre" required>
-                    <!-- <div class="alert alert-danger mt-2" [hidden]="nombre.valid || nombre.pristine">
+                    <div class="alert alert-danger mt-2" [hidden]="nombre.valid || nombre.pristine">
                         Debes agregar una nombre...
-                    </div> -->
+                    </div>
                 </div>
                 <div class="col-md-3 mb-2">
-                    <label for="inicia" class="form-label">Inicia:</label>
-                    <input class="form-control" type="datetime-local" id="inicia" formControlName="inicia" placeholder="Agregar una fecha" required>
-                    <!-- <div class="alert alert-danger mt-2" [hidden]="inicia.valid || inicia.pristine">
+                    <label for="apertura" class="form-label">Apertura:</label>
+                    <input class="form-control" type="datetime-local" id="apertura" formControlName="apertura" placeholder="Agregar una fecha" required>
+                    <div class="alert alert-danger mt-2" [hidden]="apertura.valid || apertura.pristine">
                         Debes agregar fecha de inica...
-                    </div> -->
+                    </div>
                 </div>
                 <div class="col-md-3 mb-2">
-                    <label for="termina" class="form-label">Termina:</label>
-                    <input class="form-control" type="datetime-local" id="termina" formControlName="termina" placeholder="Agregar una fecha" required>
-                    <!-- <div class="alert alert-danger mt-2" [hidden]="termina.valid || termina.pristine">
+                    <label for="cierre" class="form-label">Cierre:</label>
+                    <input class="form-control" type="datetime-local" id="cierre" formControlName="cierre" placeholder="Agregar una fecha" required>
+                    <div class="alert alert-danger mt-2" [hidden]="cierre.valid || cierre.pristine">
                         Debes agregar fecha de finalización...
-                    </div> -->
+                    </div>
                 </div>
                 <div class="col-md-12 mb-2 mt-4">
                     
-                    <table [ngClass]="{'table-responsive': true}"  datatable="datatable" [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table table-striped table-bordered row-border hover" id="table">
+                    <div class="mx-auto loader" *ngIf="isLoading">
+                        <div class="orbe" style="--index: 0"></div>
+                        <div class="orbe" style="--index: 1"></div>
+                        <div class="orbe" style="--index: 2"></div>
+                        <div class="orbe" style="--index: 3"></div>
+                        <div class="orbe" style="--index: 4"></div>
+                    </div>
+
+                    <table *ngIf="!isLoading" [ngClass]="{'table-responsive': true}"  datatable="datatable" [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table table-striped table-bordered row-border hover" id="table">
                         <thead>
                             <tr>
                                 <th>N°</th>
@@ -45,7 +53,7 @@
                                 <td >{{ item.nombres }} {{ item.apellidos }}</td>
                                 <td>{{ item.agencia}}</td>
                                 <td>{{ item.cargo  }}</td>
-                                <td><input id="inputCheck" type="checkbox"></td>
+                                <td><input id="inputCheck" type="checkbox" (change)="handleCheckboxChange($event)" ></td>
                             </tr>
                             <!-- <tr *ngIf="listaColaboradores.length === 0">
                                 <td colspan="5" style="text-align: center;">No hay registros</td>
@@ -57,7 +65,7 @@
         </form>
     </div>
     <div class="modal-footer">
-        <button type="button" class="btn btn-secondary cancelar" data-bs-dismiss="modal" (click)="cancelar()">Cancelar</button>
-        <button type="submit" id="btnAceptar" class="btn btn-success" data-bs-dismiss="modal" (click)="cargar()" >Agregar</button>
+        <button type="button" class="btn btn-secondary cancelar" (click)="cancelar()">Cancelar</button>
+        <button type="submit" id="btnAceptar" class="btn btn-success" (click)="guardar()" [disabled]="!formGrupos.valid">Guardar grupo</button>
     </div>
 </div>
