--- a/src/app/pages/datatable/dtevaluaciones/dtevaluaciones.component.html
+++ b/src/app/pages/datatable/dtevaluaciones/dtevaluaciones.component.html
@@ -19,9 +19,9 @@
             <tr>
                 <th>N°</th>
                 <th>Título</th>
-                <th>Descripción</th>
-                <th>Preguntas</th>
-                <th>Grupos</th>
+                <th>Descripción</th>                
+                <th>Grupo</th>
+                <th>N° de preguntas</th>
                 <th>Fecha registro</th>
                 <th>Acciones</th>
             </tr>
@@ -29,19 +29,19 @@
         <tbody>
             <tr *ngFor="let item of listaEvaluaciones; let i = index;">
                 <td>{{ i + 1 }}</td>
-                <td>{{ item.titulo }}</td>
+                <td>{{ item.nombre }}</td>
                 <td>{{ item.descripcion }}</td>
-                <td>{{ item.preguntas }}</td>
-                <td>{{ item.grupos }}</td>
-                <td>{{ item.created_at }}</td>
+                <td>{{ item.grupo }}</td>
+                <td>{{ item.cantidadPreguntas }}</td>
+                <td>{{ item.created_at | date: 'yyyy-MM-dd HH:mm:ss'  }}</td>
                 <td style="text-align: center;">
-                    <a type="button" class="" data-bs-toggle="tooltip" data-bs-placement="top" title="Agregar Pregunta" [routerLink]="['/dashboard/pregunta', item.id]">
+                    <a *ngIf="item.cantidadPreguntas == 0" type="button" class="" data-bs-toggle="tooltip" data-bs-placement="top" title="Agregar Pregunta" [routerLink]="['/dashboard/pregunta', item.id]">
                         <i class="bi bi-question-circle-fill" style="font-size: 1rem; color: rgb(12, 204, 5);"></i>
                     </a>
-                    <a type="button" class="ms-2" data-bs-toggle="tooltip" data-bs-placement="top" title="Editar" [routerLink]="['/dashboard/collaborator', item.id]">
+                    <a type="button" class="ms-2" data-bs-toggle="tooltip" data-bs-placement="top" title="Editar" [routerLink]="['/dashboard/evaluacion', item.id]">
                         <i class="bi bi-pencil-square" style="font-size: 1rem; color: rgb(8, 134, 252);"></i>
                     </a>
-                    <a type="button" class=" ms-2" data-bs-toggle="tooltip" data-bs-placement="top" title="Deshabilitar" (click)="eliminarDocumento(item)">
+                    <a type="button" class=" ms-2" data-bs-toggle="tooltip" data-bs-placement="top" title="Deshabilitar" (click)="eliminarEvaluacion(item)">
                         <i class="bi bi-trash" style="font-size: 1rem; color: rgb(252, 13, 13);"></i>
                     </a>
                 </td>
