--- a/src/app/pages/datatable/dtgrupos/dtgrupos.component.html
+++ b/src/app/pages/datatable/dtgrupos/dtgrupos.component.html
@@ -4,7 +4,14 @@
             <i class="bi bi-plus-lg"></i> Agregar Grupo
         </button>
     </div>
-    <table [ngClass]="{'table-responsive': true}" datatable="datatable" [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table table-striped table-bordered row-border hover" id="table">
+    <div class="mx-auto loader" *ngIf="isLoading">
+        <div class="orbe" style="--index: 0"></div>
+        <div class="orbe" style="--index: 1"></div>
+        <div class="orbe" style="--index: 2"></div>
+        <div class="orbe" style="--index: 3"></div>
+        <div class="orbe" style="--index: 4"></div>
+    </div>
+    <table *ngIf="!isLoading" [ngClass]="{'table-responsive': true}" datatable="datatable" [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table table-striped table-bordered row-border hover" id="table">
         <thead>
             <tr>
                 <th>N°</th>
@@ -21,17 +28,17 @@
             <tr *ngFor="let item of listaGrupos; let i = index;">
                 <td>{{ i + 1 }}</td>
                 <td>{{ item.nombre }}</td>
-                <td>{{ item.colaboradores }}</td>
+                <td>{{ item.colaboradores }} Colaboradores</td>
                 <td>{{ item.apertura | date: 'yyyy-MM-dd HH:mm:ss'}}</td>
                 <td>{{ item.cierre  | date: 'yyyy-MM-dd HH:mm:ss'}}</td>
-                <td>{{ item.ultimaModificacion  }}</td>
-                <td>{{ item.fechaRegistro }}</td>
+                <td>{{ item.updated_at  }}</td>
+                <td>{{ item.created_at }}</td>
                <td style="text-align: center;">
-                    <a type="button" class="" data-bs-toggle="tooltip" data-bs-placement="top" title="Agregar Evaluacion" [routerLink]="['/dashboard/evaluacion', item.id]">
+                    <a type="button" class="" data-bs-toggle="tooltip" data-bs-placement="top" title="Agregar Evaluacion" [routerLink]="['/dashboard/evaluacion', item.nombre, item.grupo_id]">
                         <i class="bi bi-card-checklist" style="font-size: 1rem; color: rgb(12, 204, 5);"></i>
                     </a>
 
-                    <a type="button" class="ms-2" data-bs-toggle="tooltip" data-bs-placement="top" title="Editar">
+                    <a type="button" class="ms-2" data-bs-toggle="tooltip" data-bs-placement="top" title="Editar" [routerLink]="['/dashboard/grupo', item.grupo_id]">
                         <i class="bi bi-pencil-square" style="font-size: 1rem; color: rgb(8, 134, 252);"></i>
                     </a>
                     <a type="button" class=" ms-2" data-bs-toggle="tooltip" data-bs-placement="top" title="Eliminar" (click)="eliminar(item)">
