--- a/src/app/pages/grupo/grupo.component.html
+++ b/src/app/pages/grupo/grupo.component.html
@@ -1,7 +1,7 @@
-<div class="form">
+<!-- <div class="form">
     <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalToggleLabel">Detalle del grupo</h5>
-        <!-- <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button> -->
+        <h5 class="modal-title" id="title">Crear grupo</h5>
+        
     </div>
     <div class="modal-body">
         <form [formGroup]="formGrupos" id="form">
@@ -55,9 +55,9 @@
                                 <td>{{ item.cargo  }}</td>
                                 <td><input id="inputCheck" type="checkbox" (change)="handleCheckboxChange($event)" ></td>
                             </tr>
-                            <!-- <tr *ngIf="listaColaboradores.length === 0">
+                            <tr *ngIf="listaColaboradores.length === 0">
                                 <td colspan="5" style="text-align: center;">No hay registros</td>
-                            </tr> -->
+                            </tr>
                         </tbody>
                     </table>
                 </div>
@@ -67,5 +67,85 @@
     <div class="modal-footer">
         <button type="button" class="btn btn-secondary cancelar" (click)="cancelar()">Cancelar</button>
         <button type="submit" id="btnAceptar" class="btn btn-success" (click)="guardar()" [disabled]="!formGrupos.valid">Guardar grupo</button>
+        <button type="submit" id="btnActualizar" class="btn btn-success" (click)="editar()" [disabled]="!formGrupos.valid">Actualizar grupo</button>
+    </div>
+</div> -->
+
+<div class="row">
+    <div class="col-lg-12">
+        <div class="card ">
+            <div class="card-body ">
+                <div class="form mt-3">
+                    <div class="row">
+                        <h1 class="card-title text-center titulo" id="title">Guardar grupo</h1>
+                        <form [formGroup]="formGrupos" id="form">
+                            <div class="row">
+                                <div class="col-md-6 mb-2">
+                                    <label class="form-label">Ingresa el nombre del grupo:</label>
+                                    <input class="form-control" type="text" id="nombre" formControlName="nombre" placeholder="Agregar un nombre" required>
+                                    <div class="alert alert-danger mt-2" [hidden]="nombre.valid || nombre.pristine">
+                                        Debes agregar una nombre...
+                                    </div>
+                                </div>
+                                <div class="col-md-3 mb-2">
+                                    <label for="apertura" class="form-label">Apertura:</label>
+                                    <input class="form-control" type="datetime-local" id="apertura" formControlName="apertura" placeholder="Agregar una fecha" required>
+                                    <div class="alert alert-danger mt-2" [hidden]="apertura.valid || apertura.pristine">
+                                        Debes agregar fecha de inica...
+                                    </div>
+                                </div>
+                                <div class="col-md-3 mb-2">
+                                    <label for="cierre" class="form-label">Cierre:</label>
+                                    <input class="form-control" type="datetime-local" id="cierre" formControlName="cierre" placeholder="Agregar una fecha" required>
+                                    <div class="alert alert-danger mt-2" [hidden]="cierre.valid || cierre.pristine">
+                                        Debes agregar fecha de finalización...
+                                    </div>
+                                </div>
+                                <div class="col-md-12 mb-2 mt-4">
+                                    
+                                    <div class="mx-auto loader" *ngIf="isLoading">
+                                        <div class="orbe" style="--index: 0"></div>
+                                        <div class="orbe" style="--index: 1"></div>
+                                        <div class="orbe" style="--index: 2"></div>
+                                        <div class="orbe" style="--index: 3"></div>
+                                        <div class="orbe" style="--index: 4"></div>
+                                    </div>
+                
+                                    <table *ngIf="!isLoading" [ngClass]="{'table-responsive': true}"  datatable="datatable" [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table table-striped table-bordered row-border hover" id="table">
+                                        <thead>
+                                            <tr>
+                                                <th>N°</th>
+                                                <th>Nombre completo</th>
+                                                <th>Agencia</th>
+                                                <th>Cargo</th>
+                                                <th>¿Incluir?</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <tr *ngFor="let item of listaColaboradores; let i = index;">
+                                                <td class="user">{{ item.id }}</td>
+                                                <td >{{ item.nombres }} {{ item.apellidos }}</td>
+                                                <td>{{ item.agencia}}</td>
+                                                <td>{{ item.cargo  }}</td>
+                                                <td><input id="inputCheck" type="checkbox" (change)="handleCheckboxChange($event)" [checked]="resultados.includes(item.id)"></td>
+                                            </tr>
+                                            <tr *ngIf="listaColaboradores.length === 0">
+                                                <td colspan="5" style="text-align: center;">No hay registros</td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary cancelar" (click)="cancelar()">Cancelar</button>
+                                <button type="submit" id="btnAceptar" class="btn btn-success" (click)="guardar()" [disabled]="!formGrupos.valid">Guardar grupo</button>
+                                <button type="submit" id="btnActualizar" class="btn btn-success" (click)="editar()" [disabled]="!formGrupos.valid">Actualizar grupo</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
+
