PORTAL: Cargando preguntas y respuestas en formulario de Quiz

--- a/src/app/pages/datatable/dtgrupos/dtgrupos.component.html
+++ b/src/app/pages/datatable/dtgrupos/dtgrupos.component.html
@@ -15,7 +15,7 @@
         <thead>
             <tr>
                 <th>N°</th>
-                <th>Grupo</th>
+                <th>Nombre del grupo</th>
                 <th>Colaboradores</th>
                 <th>Apertura</th>
                 <th>Cierre</th>
