--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -86,164 +86,12 @@
             </ul>
         </li>
 
+        <li class="nav-heading">Evaluaciones</li>
+        <li class="nav-item">
+          <a class="nav-link collapsed" routerLink="/dashboard/quiz">
+            <i class="bi bi-check2-square"></i><span>Evaluación</span>
+          </a>
+      </li>
 
-        
-
-        <!-- <li class="nav-heading">Documentos</li>
-
-        <li class="nav-item" >
-            <a class="nav-link collapsed" data-bs-target="#politicas-nav" data-bs-toggle="collapse" href="#">
-              <i class="bi bi-folder-fill"></i><span>Políticas</span><i class="bi bi-chevron-down ms-auto"></i>
-            </a>
-            <ul id="politicas-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
-              <li *ngFor="let item of listaDocumentos">
-                <a type="button" *ngIf="item.tipoDocumento_id === 1 && item.colaborador_id == id && (item.fechaLimite >= fecha || item.fechaLimite == null) && item.disponible == 0"  (click)="cargarPDF(item.nombreArchivo)">
-                  <i class="bi bi-circle"></i><span>{{ item.nombreArchivo }}</span>
-                </a>
-                <a type="button" *ngIf="item.tipoDocumento_id === 1 &&  item.departamento_id == departamento_id && (item.fechaLimite >= fecha || item.fechaLimite == null) && item.disponible == 0"  (click)="cargarPDF(item.nombreArchivo)">
-                  <i class="bi bi-circle"></i><span>{{ item.nombreArchivo }}</span>
-                </a>
-              </li>
-            </ul>
-        </li>
-
-        <li class="nav-item">
-            <a class="nav-link collapsed" data-bs-target="#reglamento-nav" data-bs-toggle="collapse" href="#">
-            <i class="bi bi-folder-fill"></i><span>Reglamento</span><i class="bi bi-chevron-down ms-auto"></i>
-            </a>
-            <ul id="reglamento-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
-              <li *ngFor="let item of listaDocumentos">
-                <a type="button" *ngIf="item.tipoDocumento_id === 2 && item.colaborador_id == id && (item.fechaLimite >= fecha || item.fechaLimite == null) && item.disponible == 0"  (click)="cargarPDF(item.nombreArchivo)">
-                  <i class="bi bi-circle"></i><span>{{ item.nombreArchivo }}</span>
-                </a>
-                <a type="button" *ngIf="item.tipoDocumento_id === 2 && item.departamento_id == departamento_id && (item.fechaLimite >= fecha || item.fechaLimite == null) && item.disponible == 0"  (click)="cargarPDF(item.nombreArchivo)">
-                  <i class="bi bi-circle"></i><span>{{ item.nombreArchivo }}</span>
-                </a>
-              </li>
-            </ul>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link collapsed" data-bs-target="#manual-nav" data-bs-toggle="collapse" href="#">
-            <i class="bi bi-folder-fill"></i><span>Manual</span><i class="bi bi-chevron-down ms-auto"></i>
-            </a>
-            <ul id="manual-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
-              <li *ngFor="let item of listaDocumentos">
-                <a type="button" *ngIf="item.tipoDocumento_id === 3 && item.colaborador_id == id && (item.fechaLimite >= fecha || item.fechaLimite == null) && item.disponible == 0"  (click)="cargarPDF(item.nombreArchivo)">
-                  <i class="bi bi-circle"></i><span>{{ item.nombreArchivo }}</span>
-                </a>
-                <a type="button" *ngIf="item.tipoDocumento_id === 3 && item.departamento_id == departamento_id && (item.fechaLimite >= fecha || item.fechaLimite == null) && item.disponible == 0"  (click)="cargarPDF(item.nombreArchivo)">
-                  <i class="bi bi-circle"></i><span>{{ item.nombreArchivo }}</span>
-                </a>
-              </li>
-            </ul>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link collapsed" data-bs-target="#instructivo-nav" data-bs-toggle="collapse" href="#">
-            <i class="bi bi-folder-fill"></i><span>Intructivo</span><i class="bi bi-chevron-down ms-auto"></i>
-            </a>
-            <ul id="instructivo-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
-              <li *ngFor="let item of listaDocumentos">
-                <a type="button" *ngIf="item.tipoDocumento_id === 4 && item.colaborador_id == id && (item.fechaLimite >= fecha || item.fechaLimite == null) && item.disponible == 0"  (click)="cargarPDF(item.nombreArchivo)">
-                  <i class="bi bi-circle"></i><span>{{ item.nombreArchivo }}</span>
-                  
-                </a>
-                <a type="button" *ngIf="item.tipoDocumento_id === 4 && item.departamento_id == departamento_id && (item.fechaLimite >= fecha || item.fechaLimite == null) && item.disponible == 0"  (click)="cargarPDF(item.nombreArchivo)">
-                  <i class="bi bi-circle"></i><span>{{ item.nombreArchivo }}</span>
-                </a>
-              </li>
-            </ul>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link collapsed" data-bs-target="#normativa-nav" data-bs-toggle="collapse" href="#">
-            <i class="bi bi-folder-fill"></i><span>Normativa</span><i class="bi bi-chevron-down ms-auto"></i>
-            </a>
-            <ul id="normativa-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
-              <li *ngFor="let item of listaDocumentos">
-                <a type="button" *ngIf="item.tipoDocumento_id === 5 && item.colaborador_id == id && (item.fechaLimite >= fecha || item.fechaLimite == null) && item.disponible == 0"  (click)="cargarPDF(item.nombreArchivo)">
-                  <i class="bi bi-circle"></i><span>{{ item.nombreArchivo }}</span>
-                </a>
-                <a type="button" *ngIf="item.tipoDocumento_id === 5 && item.departamento_id == departamento_id && (item.fechaLimite >= fecha || item.fechaLimite == null) && item.disponible == 0"  (click)="cargarPDF(item.nombreArchivo)">
-                  <i class="bi bi-circle"></i><span>{{ item.nombreArchivo }}</span>
-                </a>
-              </li>
-            </ul>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link collapsed" data-bs-target="#estrategia-nav" data-bs-toggle="collapse" href="#">
-            <i class="bi bi-folder-fill"></i><span>Estratégia</span><i class="bi bi-chevron-down ms-auto"></i>
-            </a>
-            <ul id="estrategia-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
-              <li *ngFor="let item of listaDocumentos">
-                <a type="button" *ngIf="item.tipoDocumento_id === 6 && item.colaborador_id == id && (item.fechaLimite >= fecha || item.fechaLimite == null) && item.disponible == 0"  (click)="cargarPDF(item.nombreArchivo)">
-                  <i class="bi bi-circle"></i><span>{{ item.nombreArchivo }}</span>
-                </a>
-                <a type="button" *ngIf="item.tipoDocumento_id === 6 && item.departamento_id == departamento_id && (item.fechaLimite >= fecha || item.fechaLimite == null) && item.disponible == 0"  (click)="cargarPDF(item.nombreArchivo)">
-                  <i class="bi bi-circle"></i><span>{{ item.nombreArchivo }}</span>
-                </a>
-              </li>
-            </ul>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link collapsed" data-bs-target="#estudio-nav" data-bs-toggle="collapse" href="#">
-            <i class="bi bi-folder-fill"></i><span>Estudio</span><i class="bi bi-chevron-down ms-auto"></i>
-            </a>
-            <ul id="estudio-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
-              <li *ngFor="let item of listaDocumentos">
-                <a type="button" *ngIf="item.tipoDocumento_id === 7 && item.colaborador_id == id && (item.fechaLimite >= fecha || item.fechaLimite == null) && item.disponible == 0"  (click)="cargarPDF(item.nombreArchivo)">
-                  <i class="bi bi-circle"></i><span>{{ item.nombreArchivo }}</span>
-                </a>
-                <a type="button" *ngIf="item.tipoDocumento_id === 7 && item.departamento_id == departamento_id && (item.fechaLimite >= fecha || item.fechaLimite == null) && item.disponible == 0"  (click)="cargarPDF(item.nombreArchivo)">
-                  <i class="bi bi-circle"></i><span>{{ item.nombreArchivo }}</span>
-                </a>
-              </li>
-            </ul>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link collapsed" data-bs-target="#ley-nav" data-bs-toggle="collapse" href="#">
-            <i class="bi bi-folder-fill"></i><span>Ley</span><i class="bi bi-chevron-down ms-auto"></i>
-            </a>
-            <ul id="ley-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
-              <li *ngFor="let item of listaDocumentos">
-                <a type="button" *ngIf="item.tipoDocumento_id === 8 && item.colaborador_id == id && (item.fechaLimite >= fecha || item.fechaLimite == null) && item.disponible == 0" (click)="cargarPDF(item.nombreArchivo)">
-                  <i class="bi bi-circle"></i><span>{{ item.nombreArchivo }}</span>
-                </a>
-                <a type="button" *ngIf="item.tipoDocumento_id === 8 && item.departamento_id == departamento_id && (item.fechaLimite >= fecha || item.fechaLimite == null) && item.disponible == 0" (click)="cargarPDF(item.nombreArchivo)">
-                  <i class="bi bi-circle"></i><span>{{ item.nombreArchivo }}</span>
-                </a>
-              </li>
-            </ul>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link collapsed" data-bs-target="#boletin-nav" data-bs-toggle="collapse" href="#">
-            <i class="bi bi-folder-fill"></i><span>Boletín</span><i class="bi bi-chevron-down ms-auto"></i>
-            </a>
-            <ul id="boletin-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
-              <li *ngFor="let item of listaDocumentos">
-                <a type="button" *ngIf="item.tipoDocumento_id === 9 && item.colaborador_id == id && (item.fechaLimite >= fecha || item.fechaLimite == null) && item.disponible == 0" (click)="cargarPDF(item.nombreArchivo)">
-                  <i class="bi bi-circle"></i><span>{{ item.nombreArchivo }}</span>
-                </a>
-                <a type="button" *ngIf="item.tipoDocumento_id === 9 && item.departamento_id == departamento_id && (item.fechaLimite >= fecha || item.fechaLimite == null) && item.disponible == 0" (click)="cargarPDF(item.nombreArchivo)">
-                  <i class="bi bi-circle"></i><span>{{ item.nombreArchivo }}</span>
-                </a>
-              </li>
-            </ul>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link collapsed" data-bs-target="#circulares-nav" data-bs-toggle="collapse" href="#">
-            <i class="bi bi-folder-fill"></i><span>Circulares</span><i class="bi bi-chevron-down ms-auto"></i>
-            </a>
-            <ul id="circulares-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
-              <li *ngFor="let item of listaDocumentos">
-                <a type="button" *ngIf="item.tipoDocumento_id === 10 && item.colaborador_id == id && (item.fechaLimite >= fecha || item.fechaLimite == null) && item.disponible == 0" (click)="cargarPDF(item.nombreArchivo)">
-                  <i class="bi bi-circle"></i><span>{{ item.nombreArchivo }}</span>
-                </a>
-                <a type="button" *ngIf="item.tipoDocumento_id === 10 && item.departamento_id == departamento_id && (item.fechaLimite >= fecha || item.fechaLimite == null) && item.disponible == 0" (click)="cargarPDF(item.nombreArchivo)">
-                  <i class="bi bi-circle"></i><span>{{ item.nombreArchivo }}</span>
-                </a>
-              </li>
-            </ul>
-        </li> -->
-
-        <!-- <li class="nav-heading">Evaluaciones</li> -->
     </ul>
 </aside><!-- End Sidebar-->
