--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -70,6 +70,11 @@
                         <i class="bi bi-circle"></i><span>Listado de evaluaciones</span>
                     </a>
                 </li>
+                <li>
+                    <a routerLink="/dashboard/evaluaciones-deshabilitadas">
+                        <i class="bi bi-circle"></i><span>Listado de evaluaciones deshabilitadas</span>
+                    </a>
+                </li>
             </ul>
         </li>
 
@@ -87,8 +92,8 @@
         </li>
 
         <li class="nav-heading">Evaluaciones</li>
-        <li class="nav-item">
-          <a class="nav-link collapsed" routerLink="/dashboard/quiz">
+        <li class="nav-item" >
+          <a class="nav-link collapsed" routerLink="/dashboard/quiz" *ngIf="habilitarEvaluacion">
             <i class="bi bi-check2-square"></i><span>Evaluación</span>
           </a>
       </li>
